# HC23-Isaac-Bevis-Senior-Project

./: .gitignore
CAD/: Connector resized.blend  Connector resized.blend1  Holder.stl  JST Female 3pin.stl  JST Female 6pin.stl  JST Male 3pin.stl  JST Male 6pin.stl  Reciever Housing-Housing Bottom.stl  Reciever Housing-Housing Top.stl  Reciever Housing.FCStd  Reciever Housing.FCStd1  Remote Housing Revision 2.FCStd  Remote Housing Revision 2.FCStd1  Remote Housing.FCStd  Remote Housing.FCStd1  Revision 2-Battery Cover.stl  Revision 2-Housing Bottom.stl  Revision 2-Housing Top.stl
Documents/: annotated-bibliography.md  proposal.md
Presentation/: CS461 Proposal.pptx  Poster Board Pages.docx  ~$CS461 Proposal.pptx
TestPrograms/: calculateMCA.py
TestPrograms/ESP32/ESP-NOW/ESP-NOW_Sender/: ESP-NOW_Sender.ino
TestPrograms/ESP32/ESP-NOW/ESP-NOW_receiver/: ESP-NOW_receiver.ino
TestPrograms/PicoW/: ServerMain.py  clientMain.py
code/: README.md  RollingCode.h  rollingCodeTests.cpp
code/ESP32_Reciever/: ESP32_Reciever.ino
code/ESP32_Sender/: ESP32_Sender.ino  RollingCode.h
code/rollingCodeTests/: CMakeLists.txt  RollingCode.h  rollingCodeTests.cpp
docs/: _config.yml  annotated-bibliography.md  appendix.md  index.md  proposal.md
